--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Storaji</title>
-  <base href="/">
+  <base href="">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/storaji.ico">
 </head>
 <body>
   <storaji-root></storaji-root>
